--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,15 @@ yarn-error.log*
 backend/dist/
 frontend/dist/
 frontend/build/
+dist/
 
 # Logs
 *.log
 logs/
+backend.log
+debug.log
+error.log
+access.log
 
 # Runtime data
 pids/
@@ -53,6 +58,19 @@ Thumbs.db
 
 # Prisma
 backend/prisma/migrations/dev.db*
+
+# Test and debug files
+test-*.js
+test-*.jsx
+test-*.ts
+test-*.tsx
+*test.js
+*test.jsx
+*test.ts
+*test.tsx
+*.test.*
+debug/
+test-output/
 
 # Temporary files
 *.tmp
