--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "lightningcss": "^1.30.1",
     "postcss": "^8.5.6",
+    "rollup-plugin-analyzer": "^4.0.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.1.6"
+    "terser": "^5.44.0",
+    "vite": "^7.1.6",
+    "vite-bundle-analyzer": "^1.2.3"
   }
 }
